--- a/styles.css
+++ b/styles.css
@@ -126,3 +126,11 @@ body {
 .npcText {
     margin-bottom: 6.5px;
 }
+.mapvote1 { position: relative; }
+.mapvote2 {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 9999;
+}
