--- a/styles.css
+++ b/styles.css
@@ -134,3 +134,11 @@ body {
     transform: translate(-50%, -50%);
     z-index: 9999;
 }
+.ebslot {
+    background-color: #727272;
+    color: white;
+    text-align: center;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+}
