--- a/styles.css
+++ b/styles.css
@@ -142,3 +142,10 @@ body {
     display: flex;
     justify-content: center;
 }
+
+.pointer-hover {
+    cursor: default;
+}
+.pointer-hover:hover {
+    cursor: pointer;
+}
